Fixed border flicker with slider — fixes #206

--- a/assets/scss/objects/_article.scss
+++ b/assets/scss/objects/_article.scss
@@ -30,6 +30,8 @@
 	position: absolute;
 	left: 0;
 	background: url('../images/border-wave.svg') top left repeat-x;
+
+	@include transform(translate3d(0, 0, 0.1px));
 }
 
 .border-waves-top:after {
